use CMake to split long @MASTER_TABLE_DIR@ values into 120-byte chunks

--- a/src/bfrini.f90.in
+++ b/src/bfrini.f90.in
@@ -282,7 +282,7 @@ CTRT = 'N'
 !  -------------------
 
 CMTDIR = &
-'@MASTER_TABLE_DIR@'
+'@MASTER_TABLE_DIR_F@'
 call mtinfo(CMTDIR,98,99)
 
 return
