--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,31 @@ option(BUILD_TESTS "Build tests" ON)
 
 set(MASTER_TABLE_DIR "${CMAKE_INSTALL_PREFIX}/tables" CACHE STRING "Installation location of Master BUFR Tables")
 
+string(LENGTH "${MASTER_TABLE_DIR}" _lenmtd)
+set(_lenslmax 120)  # max number of chars of ${MASTER_TABLE_DIR} to store in a single line
+                    # of a Fortran90 or C source code file
+if(${_lenmtd} LESS_EQUAL ${_lenslmax})
+  set(MASTER_TABLE_DIR_F "${MASTER_TABLE_DIR}")
+  set(MASTER_TABLE_DIR_C "${MASTER_TABLE_DIR}")
+else() # generate source code lines in chunks of ${_lenslmax} chars each
+  set(_mtd_f "")
+  set(_mtd_c "")
+  set(_len2go ${_lenmtd})
+  set(_start 0)
+  while(${_len2go} GREATER ${_lenslmax})
+    string(SUBSTRING "${MASTER_TABLE_DIR}" ${_start} ${_lenslmax} _chunk)
+    string(APPEND _mtd_f "${_chunk}" "' // &\n'")
+    string(APPEND _mtd_c "${_chunk}" "\" \n\t\t\"")
+    math(EXPR _len2go "${_len2go} - ${_lenslmax}")
+    math(EXPR _start "${_start} + ${_lenslmax}")
+  endwhile()
+  string(SUBSTRING "${MASTER_TABLE_DIR}" ${_start} -1 _chunk)
+  string(APPEND _mtd_f "${_chunk}")
+  string(APPEND _mtd_c "${_chunk}")
+  set(MASTER_TABLE_DIR_F "${_mtd_f}")
+  set(MASTER_TABLE_DIR_C "${_mtd_c}")
+endif()
+
 if(NOT CMAKE_BUILD_TYPE MATCHES "^(Debug|Release|RelWithDebInfo|MinSizeRel)$")
   message(STATUS "Setting build type to 'Release' as none was specified.")
   set(CMAKE_BUILD_TYPE
@@ -65,7 +90,7 @@ if(CMAKE_Fortran_COMPILER_ID MATCHES "^(Intel)$")
 elseif(CMAKE_Fortran_COMPILER_ID MATCHES "^(GNU)$")
   set(fortran_8_flags "-fdefault-real-8 -fdefault-integer-8")
   set(fortran_d_flags "-fdefault-real-8")
-  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -g -fbacktrace -ffree-line-length-none")
+  set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -g -fbacktrace")
   set(CMAKE_Fortran_FLAGS_DEBUG "-ggdb -Wall -O0")
   set(CMAKE_Fortran_FLAGS_RELEASE "-O3")
 endif()
