--- a/utils/debufr.c.in
+++ b/utils/debufr.c.in
@@ -20,7 +20,7 @@ void fdebufr( char *, char *, f77int *, char *, char *, char *, char *, char *,
               size_t, size_t, size_t, size_t, size_t, size_t, size_t );
 void prtusage( char * );
 
-#define MXFLEN 125
+#define MXFLEN 500
 
 /**
  * This function prints program usage information to standard output.
@@ -167,6 +167,7 @@ void prtusage( char *prgnam ) {
  * | 2018-09-05 | J. Ator | Add -p option to pass in one or more BUFRLIB dynamic allocation parameters to override default settings |
  * | 2019-02-01 | J. Ator | Remove limit on length of prmstg, and allow up to 20 PARAMETER=VALUE pairs |
  * | 2021-03-02 | J. Ator | Add missing #include files, remove unused errflg variable, and other general cleanup |
+ * | 2022-02-03 | J. Ator | Increase MXFLEN to 500 |
  */
 
 int main( int argc, char *argv[ ] ) {
@@ -177,11 +178,12 @@ int main( int argc, char *argv[ ] ) {
 	char forcemt = 'N';
 	char cfms = 'Y';
 	char io = 'r';
-	char tbldir[MXFLEN] = "@MASTER_TABLE_DIR@";
+	char tbldir[MXFLEN] =
+		"@MASTER_TABLE_DIR_C@";
 	char outfile[MXFLEN];
 	char wkstr[MXFLEN];
 	char wkstr2[MXFLEN];
-	char tblfil[(MXFLEN*2)+5];
+	char tblfil[MXFLEN+30];
 	char prmstg[300] = "NULLPSTG";
 	char bvstr[9] = "        ";
 
@@ -205,7 +207,7 @@ int main( int argc, char *argv[ ] ) {
 			  break;
 			}
 		    }
-		    printf( "This is debufr v3.1.0, built with BUFRLIB v%s\n",
+		    printf( "This is debufr v3.1.1, built with BUFRLIB v%s\n",
 			    bvstr );
 		    return 0;
 		case 'h':
