--- a/python/CMakeLists.txt
+++ b/python/CMakeLists.txt
@@ -20,12 +20,10 @@ install(CODE "if( NOT \$ENV{DESTDIR} STREQUAL \"\" )
               message(\"Installing Python modules:
                                       ${Python3_EXECUTABLE} -m pip install \${__root}
                                         --prefix=${CMAKE_INSTALL_PREFIX}
-                                        --install-option=\"--install-lib=${_install_dir}\"
-                                        --global-option=\"--record=${CMAKE_BINARY_DIR}/extra_install.txt\"\")
+                                        --target=${_install_dir}
               execute_process(COMMAND ${Python3_EXECUTABLE} -m pip install \${__root}
                                         --prefix=${CMAKE_INSTALL_PREFIX}
-                                        --install-option=\"--install-lib=${_install_dir}\"
-                                        --global-option=\"--record=${CMAKE_BINARY_DIR}/extra_install.txt\"
+                                        --target=${_install_dir}
                               WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})")
 
 if(ENABLE_DOCS)
