--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,6 +67,7 @@ jobs:
         cd build
         pybufr_dir=`pwd`/install/lib/python3.8/site-packages/py_ncepbufr-11.6.0-py3.8-linux-x86_64.egg
         export PYTHONPATH="${PYTHONPATH}:${pybufr_dir}"
+        ls `pwd`/install/lib/python3.8/site-packages/
         cmake -DCMAKE_INSTALL_PREFIX=./install -DENABLE_PYTHON=ON ..
         make -j2
         make install
