--- a/utils/sinv.f.in
+++ b/utils/sinv.f.in
@@ -38,6 +38,7 @@
 
       IF(NARG==2) THEN ! arg 2 would be a user defined table dir
          call getarg(2,tbldir)
+         print*,tbldir
          call mtinfo(tbldir,3,4)
       else ! otherwise default table dir is used
          call mtinfo(           &
