--- a/utils/sinv.f.in
+++ b/utils/sinv.f.in
@@ -38,7 +38,7 @@
 
       IF(NARG==2) THEN ! arg 2 would be a user defined table dir
          call getarg(2,tbldir)
-         print*,tbldir
+         print*,trim(tbldir)
          call mtinfo(tbldir,3,4)
       else ! otherwise default table dir is used
          call mtinfo(           &
@@ -89,13 +89,20 @@
 !-----------------------------------------------------------------------
       subroutine satcode(lunit,icode,csad,jcode,csid)
 
-      character(*) :: csad,csid
+      character(16)  :: csad
+      character(80)  :: csid
+      character(255) :: str
 
-      csad=' '; csid=' '
+      csad(1:16)=' '; csid(1:80)=' '
 
 !  call routines to look  up the said and siid 
 
-      if(icode>0) call getcfmng(lunit,'SAID',icode,'  ',-1,csad,len,iret)
-      if(jcode>0) call getcfmng(lunit,'SIID',jcode,'  ',-1,csid,len,iret)
+      if(icode>0) then
+         str=repeat(' ',255)
+         call getcfmng(lunit,'SAID',icode,'  ',-1,str,len,iret); csad=str(1:16)
+      elseif(jcode>0) then
+         str=repeat(' ',255)
+         call getcfmng(lunit,'SIID',jcode,'  ',-1,str,len,iret); csid=str(1:80)
+      endif
 
       end subroutine
