typo fixed in sinv

--- a/utils/sinv.f.in
+++ b/utils/sinv.f.in
@@ -82,7 +82,7 @@
       enddo
       enddo
 
-      write(6,'(/23x,i10/)',jsat
+      write(6,'(/23x,i10/)') jsat
 
       end program 
 !-----------------------------------------------------------------------
