--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -185,13 +185,13 @@ foreach(test_src ${test_c_interface_srcs})
   endforeach()
 endforeach()
 
-# Test debufr.x utility
+# Test debufr utility
 set(db_flags_1 "-t ../tables")
 set(db_flags_2 "-t testfiles/data -f bufrtab.031 -c")
 foreach(db_num RANGE 1 2)
   set(db_case debufr_${db_num})
   add_test(NAME test_${db_case} COMMAND ${CMAKE_BINARY_DIR}/bin/test_debufr.sh
-           "${CMAKE_BINARY_DIR}/utils/debufr.x ${db_flags_${db_num}}" "testfiles/data/${db_case}"
+           "${CMAKE_BINARY_DIR}/utils/debufr ${db_flags_${db_num}}" "testfiles/data/${db_case}"
            "testrun/${db_case}.run" "testfiles/testoutput/${db_case}.out")
 endforeach()
 
@@ -202,7 +202,7 @@ add_test(NAME test_gettab
 
 # Test sinv utility
 add_test(NAME test_sinv 
-  COMMAND ${CMAKE_BINARY_DIR}/bin/test_sinv.sh "${CMAKE_BINARY_DIR}/utils/sinv testfiles/data/satwndbufr ${CMAKE_BINARY_DIR}/tables" "testrun/sinv.out"  "testfiles/testoutput/sinv.out"
+  COMMAND ${CMAKE_BINARY_DIR}/bin/test_sinv.sh "${CMAKE_BINARY_DIR}/utils/sinv testfiles/data/satwndbufr ../tables" "testrun/sinv.out"  "testfiles/testoutput/sinv.out"
   )
 
 # Test binv utility
@@ -211,7 +211,7 @@ add_test(NAME test_binv
   )
 
 
-# Test split_by_subset.x utility
+# Test split_by_subset utility
 add_test(NAME test_split_by_subset
   COMMAND ${CMAKE_BINARY_DIR}/bin/test_split_by_subset.sh "${CMAKE_BINARY_DIR}/utils/split_by_subset testfiles/data/satwndbufr" "testfiles/testoutput/satwndbufr_split"
   )
@@ -231,12 +231,12 @@ add_test(NAME test_cmpbqm
   COMMAND ${CMAKE_BINARY_DIR}/bin/test_cmpbqm.sh "${CMAKE_BINARY_DIR}/utils/cmpbqm testfiles/data/prepbufr" "testrun/cmpbqm.out" "testfiles/testoutput/cmpbqm.out"
   )
 
-# Test xbfmg.x utility
+# Test xbfmg utility
 set(xb_flags_1 "-g")
 set(xb_flags_2 "")
 foreach(xb_num RANGE 1 2)
   set(xb_case xbfmg_${xb_num})
   add_test(NAME test_${xb_case} COMMAND ${CMAKE_BINARY_DIR}/bin/test_xbfmg.sh
-           "${CMAKE_BINARY_DIR}/utils/xbfmg.x ${xb_flags_${xb_num}}" "testfiles/data"
+           "${CMAKE_BINARY_DIR}/utils/xbfmg ${xb_flags_${xb_num}}" "testfiles/data"
            "testfiles/testoutput/xbfmg" "${xb_case}")
 endforeach()
