commenting out test_OUT_6_8 because of irrelevance

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -68,9 +68,9 @@ list(APPEND test_OUT_5_srcs
   test_OUT_5.f
 )
 
-list(APPEND test_OUT_6_srcs
-  test_OUT_6.f
-)
+#list(APPEND test_OUT_6_srcs
+#  test_OUT_6.f
+#)
 
 list(APPEND test_c_interface_srcs
   test_c_interface.c
