--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ if(CMAKE_C_COMPILER_ID MATCHES "^(Intel)$")
   set(CMAKE_C_FLAGS_DEBUG "-O0")
   set(CMAKE_C_FLAGS_RELEASE "-O3")
 elseif(CMAKE_C_COMPILER_ID MATCHES "^(GNU)$")
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fbacktrace")
+  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
   set(CMAKE_C_FLAGS_DEBUG "-ggdb -Wall -O0")
   set(CMAKE_C_FLAGS_RELEASE "-O3")
 endif()
