expand IN/OUT tests to 4,8,d builds + remove generic int function

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -112,10 +112,12 @@ list(APPEND test_kinds_4 "4")
 
 list(APPEND test_kinds_8 "8")
 
+list(APPEND test_kinds_d "d")
+
 # IN tests
 foreach(test_src ${test_IN_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds_4})
+  foreach(kind ${test_kinds_4} ${test_kinds_8} ${test_kinds_d})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -130,7 +132,7 @@ endforeach()
 # OUT_1, OUT_3, OUT_4, and OUT_5 tests
 foreach(test_src ${test_OUT_1_srcs} ${test_OUT_3_srcs} ${test_OUT_4_srcs} ${test_OUT_5_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds_4})
+  foreach(kind ${test_kinds_4} ${test_kinds_8} ${test_kinds_d})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -145,7 +147,7 @@ endforeach()
 # OUT_2 tests; these use the bufr_add_test_preAPX function
 foreach(test_src ${test_OUT_2_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds_4})
+  foreach(kind ${test_kinds_4} ${test_kinds_8} ${test_kinds_d})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
@@ -160,7 +162,7 @@ endforeach()
 # OUT_6 tests; these are for "8" (8-byte integer, 8-byte real) builds only
 foreach(test_src ${test_OUT_6_srcs})
   string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds_4} ${test_kinds_8})
+  foreach(kind ${test_kinds_4} ${test_kinds_8} ${test_kinds_d})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
