--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -28,16 +28,14 @@ foreach(_src ${_utils_srcs})
   list(APPEND _utils_execs ${_exec})
 endforeach()
 
-# the debufr utility uses the "8" (8-byte integer, 8-byte real) build of the library
+# the debufr utility consists of both a C source file and a Fortran source file
 set(_exec debufr)
 add_executable(${_exec} ${CMAKE_CURRENT_BINARY_DIR}/debufr.c debufr.f)
-add_dependencies(${_exec} bufr::bufr_8)
-set_property(SOURCE ${CMAKE_CURRENT_BINARY_DIR}/debufr.c APPEND_STRING PROPERTY COMPILE_DEFINITIONS
-             "${underscore_def}" "${c_8_defs}")
-set_property(SOURCE debufr.f APPEND_STRING PROPERTY COMPILE_FLAGS "${fortran_8_flags}")
+add_dependencies(${_exec} bufr::bufr_4)
+set_property(SOURCE ${CMAKE_CURRENT_BINARY_DIR}/debufr.c APPEND_STRING PROPERTY COMPILE_DEFINITIONS "${underscore_def}")
 target_include_directories(${_exec} PRIVATE "${PROJECT_BINARY_DIR}/src")
 set_property(TARGET ${_exec} PROPERTY LINKER_LANGUAGE C)
-target_link_libraries(${_exec} PRIVATE bufr::bufr_8)
+target_link_libraries(${_exec} PRIVATE bufr::bufr_4)
 list(APPEND _utils_execs ${_exec})
 
 install(TARGETS ${_utils_execs}
