--- a/utils/sinv.f90.in
+++ b/utils/sinv.f90.in
@@ -1,6 +1,8 @@
 !-----------------------------------------------------------------------
 !-----------------------------------------------------------------------
       PROGRAM SINV
+
+      use bufr_procedures
  
       PARAMETER (MAXA=16000000)
       PARAMETER (MAXS=1000)
