add more integer*8 wrappers, and start reconfiguring test codes to test them
also modify workflow/*yml files to test in GitHub on pull_request only, and not also on push

--- a/.github/workflows/main_new.yml
+++ b/.github/workflows/main_new.yml
@@ -1,5 +1,11 @@
 name: code coverage
-on: [push, pull_request]
+on:
+  push:
+    branches:
+    - develop
+  pull_request:
+    branches:
+    - develop
 
 jobs:
   build:
