more wrappers, documentation, and reconfigured test codes
also reverted workflow/main_new.yml, for now at least

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -44,23 +44,20 @@ list(APPEND test_IN_srcs
   test_IN_3.F
   test_IN_4.F
   test_IN_5.F
-  )
-
-list(APPEND test_IN_srcs_PREV
-  test_IN_6.f
-  test_IN_7.f
+  test_IN_6.F
+  test_IN_7.F
   )
 
 list(APPEND test_OUT_2_srcs
-  test_OUT_2.f
+  test_OUT_2.F
   )
 
 list(APPEND test_OUT_other_srcs
   test_OUT_1.F
+  test_OUT_3.F
   )
 
 list(APPEND test_OUT_other_srcs_PREV
-  test_OUT_3.f
   test_OUT_4.f
   test_OUT_5.f
   test_OUT_6.f
@@ -123,32 +120,18 @@ foreach(test_src ${test_IN_srcs})
   endforeach()
 endforeach()
 
-# IN tests
-foreach(test_src ${test_IN_srcs_PREV})
-  string(REPLACE ".f" "" testPref ${test_src})
-  foreach(kind ${test_kinds})
-    set(test     ${testPref}_${kind})
-    set(test_exe ${test}.x)
-    add_executable(${test_exe} ${test_src})
-    set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
-                                                 "${fortran_${kind}_flags}")
-    add_dependencies(${test_exe} bufr_${kind})
-    target_link_libraries(${test_exe} PUBLIC bufr::bufr_${kind})
-    add_test(NAME ${test} COMMAND ${CMAKE_BINARY_DIR}/bin/test_wrapper_IN.sh ${test_exe})
-  endforeach()
-endforeach()
-
 # OUT_2 tests; these use the bufr_add_test_preAPX function
 foreach(test_src ${test_OUT_2_srcs})
-  string(REPLACE ".f" "" testPref ${test_src})
+  string(REPLACE ".F" "" testPref ${test_src})
   foreach(kind ${test_kinds})
     set(test     ${testPref}_${kind})
     set(test_exe ${test}.x)
     add_executable(${test_exe} ${test_src})
     set_target_properties(${test_exe} PROPERTIES COMPILE_FLAGS
                                                  "${fortran_${kind}_flags}")
-    add_dependencies(${test_exe} bufr_${kind})
-    target_link_libraries(${test_exe} PRIVATE bufr::bufr_${kind})
+    target_compile_definitions(${test_exe} PRIVATE "${fortran_${kind}_defs}")
+    add_dependencies(${test_exe} bufr_4)
+    target_link_libraries(${test_exe} PRIVATE bufr::bufr_4)
     bufr_add_test_preAPX(${test} ${test_exe})
   endforeach()
 endforeach()
