--- a/.github/workflows/main_new.yml
+++ b/.github/workflows/main_new.yml
@@ -1,11 +1,5 @@
 name: code coverage
-on:
-  push:
-    branches:
-    - develop
-  pull_request:
-    branches:
-    - develop
+on: [push, pull_request]
 
 jobs:
   build:
